--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Task-01</title>
+  <title>My Work-01</title>
   <link rel="stylesheet" href="style.css">
   </head>
 <body>
@@ -42,3 +42,49 @@
     </div>
   </div>
 </div>
+<div class="testimonial-section">
+<h2>What our users say</h2>
+  
+  <div class="testimonial-grid">
+    <div class="testimonial-card">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <p class="subtitle">Loved by Designers</p>
+      <p class="srd">This template instantly leveled up<br>our presence.”-Studio Vertex</p>
+      <div class="review-footer">
+        <img src="Assets/avatar.png" alt="">
+        <span class="reviewer">Reviewer Name<br>Date</span>
+      </div>
+      </div>
+    <div class="testimonial-card">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <p class="subtitle">Loved by Designers</p>
+      <p class="srd">This template instantly leveled up<br>our presence.”-Studio Vertex</p>
+      <div class="review-footer">
+       <img src="Assets/avatar.png" alt="">
+        <span class="reviewer">Reviewer Name<br>Date</span>
+      </div>
+    </div>
+
+    <div class="testimonial-card">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+      <img src="Assets/icon-star.png" alt="">
+
+      <p class="subtitle">Loved by Designers</p>
+      <p class="srd">This template instantly leveled up<br>our presence.”-Studio Vertex</p>
+      <div class="review-footer">
+        <img src="Assets/avatar.png" alt="">
+        <span class="reviewer">Reviewer Name<br>Date</span>
+        </div>
+      </div>
+      </div>
