--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <footer class="footer">
   <h1 class="footer-logo">LOGO</h1>
   <p class="footer-text">
-    Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
+    Ready to elevate your online presence? Contact us today to discuss<br>your project and discover how we can bring your vision to life.
   </p>
   <nav class="footer-nav">
     <a href="#">Home</a>
